<resources>
    <string name="app_name">TastyIdea</string>
    <string name="favoritRecepies">Favorite Recipes</string>
    <string name="myRecepies">My Recipes</string>
    <string name="prefrences">Preferences</string>
    <string name="addRecepie">Add Recipe</string>
    <string name="search_recepie">Search Recipes</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_vegetarian_switch">Vegetarian</string>
    <string name="pref_description_vegetarian_switch">Search will show only vegetarian recipes</string>
    <string name="pref_description_vegan_switch">Search will show only vegan recipes</string>
    <string name="pref_title_vegan_switch">Vegan</string>
    <string name="pref_description_kosher_switch">Search will show only kosher recipes</string>
    <string name="pref_title_kosher_switch">Kosher</string>
    <string name="pref_title_manage_excluded_ingredients">Manage excluded ingredients</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="minRatingPreferenceTitle">Minimum Rating</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="pref_display_name_summary">Select username for display</string>
    <string name="pref_display_name_title">Username</string>
    <string name="pref_max_time_summary">Set maximum preparation time hh:mm</string>
    <string name="pref_max_time_title">Max Preparation Time</string>
    <string name="set">Set</string>
    <string name="pref_DifficultyLevel_summary">Select max difficulty level</string>
    <string name="pref_DifficultyLevel">Max Difficulty level</string>
    <string name="pref_excluded_ingredients_summary">Search will not show recipes containing excluded ingredients</string>
    <string name="name_field">Name: </string>
    <string name="next_step">Next step:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="attach_photo">Attach photo</string>
    <string name="directions">Directions:</string>
    <string name="cooking_time_title">Preparation Time:</string>
    <string name="category_title">Category: </string>
    <string name="difficulty_level_title">Difficulty level: </string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_recipe_view">Recipe View</string>
    <string name="title_activity_recipes_list">Recipes List</string>
    <string name="preferences_title">Preferences</string>
    <string name="share">Share</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="pancakes">Pancakes</string>
    <string name="recipes_list_share_menu_title">Share</string>
    <string name="recipes_list_edit_menu_title">Edit</string>
    <string name="easy">Easy</string>
    <string name="select_ingredients">Select ingredients</string>
    <string name="attributes">Attributes</string>
    <string name="ingredients_title">Insredients</string>
    <string name="directions_title">Directions</string>
    <string name="recipes_list_favorites_menu_title">Favorites</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="kosher">Kosher</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="login_description">login for full functionality</string>
    <string name="exit_confirmation">Are you sure you want to exit?</string>
    <string name="confirmation_positive_btn">Yes</string>
    <string name="confirmation_negative_btn">No</string>
    <string name="delete_confirmation">Do you want to Delete</string>
    <string name="delete_confirmation_positive_btn">Delete</string>
    <string name="delete_confirmation_negative_btn">Cancel</string>
    <string name="logout_confirmation_negative_btn">Cancel</string>
    <string name="logout_confirmation_positive_btn">Logout</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="search_results">search results</string>
    <string name="OK">OK</string>
    <string name="recipes_not_found">No recipes found</string>
    <string name="cannot_get_recipes">Cannot get recipes from server</string>
    <string name="cannot_load_recipe">cannot load recipe from server</string>
    <string name="error">Error</string>
    <string name="no_ingredients_selected_message">No ingredients selected!</string>
    <string name="excluded_ingredients">Excluded Ingredients:</string>
    <string name="general">General</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="category">Category:</string>
    <string name="save_as_default">Save As Default</string>
    <string name="settings_saved_as_defalut_message">Saved as default!</string>
    <string name="feature_not_implemented">not implemented yet!</string>
    <string name="ingredients_headline">Ingredients:</string>
    <string name="preparation_headline">Preparation:</string>
</resources>
