<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <SwitchPreference
        android:defaultValue="false"
        android:key="vegeterian_switch"
        android:summary="@string/pref_description_vegetarian_switch"
        android:title="@string/pref_title_vegetarian_switch" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="vegan_switch"
        android:summary="@string/pref_description_vegan_switch"
        android:title="@string/pref_title_vegan_switch" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="kosher_switch"
        android:summary="@string/pref_description_kosher_switch"
        android:title="@string/pref_title_kosher_switch" />

    <com.example.asaelr.tastyidea.Preferences.ExcludeIngrediantsPreference
        android:title="@string/pref_title_manage_excluded_ingredients"
        android:summary="@string/pref_excluded_ingredients_summary"
        />
    <com.example.asaelr.tastyidea.Preferences.MinRatingPreference
        android:key="min_rating"
        android:title="@string/minRatingPreferenceTitle"


        />
    <com.example.asaelr.tastyidea.Preferences.TimePreference
        android:key="time_pref_key"
        android:title="@string/pref_max_time_title"
        android:summary="@string/pref_max_time_summary"
        android:inputType="time"
        />
    <ListPreference
        android:key="prefDifficultyLevel"
        android:entries="@array/DifficultyLevel"
        android:summary="@string/pref_DifficultyLevel_summary"
        android:entryValues="@array/DifficultyLevelValues"
        android:title="@string/pref_DifficultyLevel" />




</PreferenceScreen>