<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:key="vegeterian_switch"
        android:summary="@string/pref_description_vegetarian_switch"
        android:title="@string/pref_title_vegetarian_switch" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="vegan_switch"
        android:summary="@string/pref_description_vegan_switch"
        android:title="@string/pref_title_vegan_switch" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="kosher_switch"
        android:summary="@string/pref_description_kosher_switch"
        android:title="@string/pref_title_kosher_switch" />
    <Preference android:title="@string/pref_title_manage_excluded_ingridaiants">
        <intent android:targetClass="com.example.nati.uidesign.MainActivity"
                android:action="android.intent.action.VIEW"
                android:data="com.example.nati.uidesign.MainActivity"
            />
    </Preference>

</PreferenceScreen>