<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/vegetarian_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vegetarian" />
            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/vegan_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vegan" />
            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/kosher_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kosher" />

        </LinearLayout>

        <View style="@style/Divider"/>

        <include layout="@layout/minimum_rating_pref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/min_rate"/>

        <View style="@style/Divider"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/timeLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
                android:text="@string/pref_max_time_title"/>
            <!--<TimePicker-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/maxTime"/>-->
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/excluded_ingredients"
        style="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"/>
    <fragment
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:name="com.example.asaelr.tastyidea.IngredientListFragment"
        android:id="@+id/excluded_ingredients_list_fragment"
        android:background="@color/listBackground"/>


</LinearLayout>